# jsovon

./: .gitignore  LICENSE  README.md  test.json
scripts/: build_test.sh
src/: CMakeLists.txt  test.cpp
src/jsovon/: CMakeLists.txt  api.cppm  array.cppm  base.cppm  bool.cppm  error.cppm  null.cppm  number.cppm  object.cppm  ovo.cppm  parser.cppm  scanner.cppm  string.cppm  wrapper.cppm
